--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <aside>This website has some subtext that goes here under the main title. It's a smaller font and the color is
             lower contrast.</aside>
         <button>Sign Up</button>
-        <img src="" alt="">this is a placeholder for an image</img>
+        <div>this is a placeholder for an image</div>
     </section>
     <section class="rand">
         <h2>Some random information.</h2>
