Style random section

--- a/index.html
+++ b/index.html
@@ -26,15 +26,19 @@
     <section class="rand">
         <h2>Some random information.</h2>
         <figure>
+            <div class="img"></div>
             <figcaption>this is some subtext under an illustration or image</figcaption>
         </figure>
         <figure>
+            <div class="img"></div>
             <figcaption>this is some subtext under an illustration or image</figcaption>
         </figure>
         <figure>
+            <div class="img"></div>
             <figcaption>this is some subtext under an illustration or image</figcaption>
         </figure>
         <figure>
+            <div class="img"></div>
             <figcaption>this is some subtext under an illustration or image</figcaption>
         </figure>
     </section>
