--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
         </ul>
     </nav>
     <section class="hero">
-        <h2>This website is awesome</h2>
-        <aside>This website has some subtext that goes here under the main title. It's a smaller font and the color is
-            lower contrast.</aside>
-        <button>Sign Up</button>
-        <div>this is a placeholder for an image</div>
+
+        <div class="subt">
+            <h2>This website is awesome</h2>
+            <aside>This website has some subtext that goes here under the main title. It's a smaller font and the color is
+                lower contrast.</aside>
+            <button>Sign Up</button>
+        </div>
+        <div class="img">
+            <aside>this is a placeholder for an image</aside>
+        </div>
     </section>
     <section class="rand">
         <h2>Some random information.</h2>
