--- a/index.html
+++ b/index.html
@@ -30,22 +30,24 @@
     </section>
     <section class="rand">
         <h2>Some random information.</h2>
-        <figure>
-            <div class="img"></div>
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-        </figure>
-        <figure>
-            <div class="img"></div>
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-        </figure>
-        <figure>
-            <div class="img"></div>
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-        </figure>
-        <figure>
-            <div class="img"></div>
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-        </figure>
+        <div class="figs">
+            <figure>
+                <div class="img"></div>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <div class="img"></div>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <div class="img"></div>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <div class="img"></div>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+        </div>
     </section>
     <section class="quote">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
