--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="quote">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
             people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <p class="auth">-Thor, God of Thunder</p>
     </section>
     <section class="sign-up">
         <h3>Call to action! It's time!</h3>
