--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
         <p class="auth">-Thor, God of Thunder</p>
     </section>
     <section class="sign-up">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clocking that button over there!</p>
+        <div class="text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clocking that button over there!</p>
+        </div>
         <button>Sign up</button>
     </section>
     <footer>
